--- a/frontend/web/styles/styles.scss
+++ b/frontend/web/styles/styles.scss
@@ -197,6 +197,8 @@ body {
   background: $body-bg;
   font-family: $font-family;
   font-weight: 400;
+  font-size: 1rem;
+  line-height: 22px;
   color: $text-icon-dark;
 }
 
